# continual-incident-engine

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
artifacts/: github_issues_min.json  real_experiment_results.json  results.json
docs/: CONTINUAL_LEARNING.md
scripts/: run_api.ps1  run_api.sh  run_github_1500_ablation.py  run_real_experiment.py  run_replay_ablation.py  run_ui.ps1
src/incident_cl/: __init__.py  buffer.py  cli.py  config.py  data.py  experiment.py  metrics.py  model.py
src/incident_memory_engine/: __init__.py  config.py
src/incident_memory_engine/api/: app.py  deps.py  responses.py  schemas.py  server.py
src/incident_memory_engine/buffer/: __init__.py  replay_buffer.py
src/incident_memory_engine/core/: __init__.py  data_stream.py  drift_tracker.py  engine.py  feature_pipeline.py  llm_assist.py  model.py  persistence.py  vector_index.py
src/incident_memory_engine/data/: __init__.py  github_ingest.py
src/incident_memory_engine/metrics/: __init__.py  cl_metrics.py  forgetting_alert.py
tests/: conftest.py  test_api.py  test_buffer.py  test_engine.py  test_faiss_index.py  test_github_ingest_unit.py  test_metrics.py  test_persistence_split.py  test_run_real_experiment_smoke.py
ui/: dashboard.py
