[project]
name = "incident-cl"
version = "0.2.0"
description = "Incident Memory Engine — continual learning API + dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "scikit-learn>=1.3.0",
    "slowapi>=0.1.9",
    "faiss-cpu>=1.8.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
sentence = ["sentence-transformers>=3.0.0"]

[project.scripts]
incident-cl-train = "incident_cl.cli:main"
ime-api = "incident_memory_engine.api.server:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
